--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -43,4 +43,4 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           source: 'index.js'
-          target: /dev/github_workflows/
+          target: ${{ secrets.TARGET }}
