--- a/package.json
+++ b/package.json
@@ -1,12 +1,29 @@
 {
   "name": "github_workflows",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx nodemon",
+    "start": "node build/index.js",
+    "build": "npx tsc",
+    "prepare": "husky",
+    "format": "prettier --write --check \"src/**/*.ts\""
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^20.10.7",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.3.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "express": "^4.21.0"
+  }
 }
