WIP: trying to fix npm not found error

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -59,6 +59,8 @@ jobs:
           port: ${{ secrets.PORT }}
           script: |
             cd ${{ secrets.TARGET }}
+            echo $PATH
+            witch npm
             git pull
             ls -la
             npm install
