WIP: creating a sh file to run out of non-shell interaction error

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -59,12 +59,5 @@ jobs:
           port: ${{ secrets.PORT }}
           script: |
             cd ${{ secrets.TARGET }}
-            echo $PATH
-            witch npm
-            git pull
             ls -la
-            npm install
-            npm run build
-            npm run start
-            ls -la
-            echo "done"
+            sh build.sh
