WIP: testing build with $(which npm)

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -58,8 +58,9 @@ jobs:
           key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
           script: |
-            [ -s "$HOME/.nvm/nvm.sh" ] && \. "$HOME/.nvm/nvm.sh"
             cd ${{ secrets.TARGET }}
             git pull
             ls -la
-            sh build.sh
+            $(which npm) install
+            $(which npm) run build
+            $(which npm) run start
