WIP: trying source bashrc

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -58,7 +58,7 @@ jobs:
           key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
           script: |
-            source ~/.bashrc.profile
+            source ~/.bashrc
             cd ${{ secrets.TARGET }}
             git pull
             ls -la
