--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -57,7 +57,7 @@ jobs:
         run: |
           install -m 600 -D /dev/null ~/.ssh/id_rsa
           echo "{{ secrets.KEY }}" > ~/.ssh/id_rsa
-          ssh-keyscan -H {{ secrets.HOST }} > ~/.ssh/known_hosts
+          ssh-keyscan -p {{ secrets.PORT }} -H {{ secrets.HOST }} > ~/.ssh/known_hosts
       - name: Connect to host and pull
         run: |
           ssh -i ~/.ssh/id_rsa {{ secrets.USERNAME }}@{{ secrets.HOST }} -p {{ secrets.PORT }}
