--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -56,12 +56,12 @@ jobs:
       - name: Acess host
         run: |
           install -m 600 -D /dev/null ~/.ssh/id_rsa
-          echo "{{ secrets.KEY }}" > ~/.ssh/id_rsa
-          ssh-keyscan -p ${{ secrets.PORT }} -H {{ secrets.HOST }} > ~/.ssh/known_hosts
+          echo "${{ secrets.KEY }}" > ~/.ssh/id_rsa
+          ssh-keyscan -p ${{ secrets.PORT }} -H ${{ secrets.HOST }} > ~/.ssh/known_hosts
       - name: Connect to host and pull
         run: |
-          ssh -i ~/.ssh/id_rsa {{ secrets.USERNAME }}@{{ secrets.HOST }} -p {{ secrets.PORT }}
-          cd {{ secrets.TARGET }}
+          ssh -i ~/.ssh/id_rsa ${{ secrets.USERNAME }}@${{ secrets.HOST }} -p ${{ secrets.PORT }}
+          cd ${{ secrets.TARGET }}
           git pull
           ls -la
           pm2 restart actions
