--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -61,6 +61,7 @@ jobs:
           ssh-keyscan -p ${{ secrets.PORT }} -H ${{ secrets.HOST }} > ~/.ssh/known_hosts
       - name: Connect to host and pull
         run: |
+          ls -la ~/.ssh
           ssh -i ~/.ssh/id_rsa ${{ secrets.USERNAME }}@${{ secrets.HOST }} -p ${{ secrets.PORT }}
           cd ${{ secrets.TARGET }}
           git pull
