WIP: creating ssh directory

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -55,6 +55,8 @@ jobs:
 
       - name: Acess host
         run: |
+
+          mkdir -p ~/.ssh
           echo "Host ${{ secrets.HOST }}" >> ~/.ssh/config
           echo "  User ${{ secrets.USERNAME }}" >> ~/.ssh/config
           echo "  IdentityFile ~/.ssh/id_rsa" >> ~/.ssh/config
