--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -56,21 +56,20 @@ jobs:
       - name: Acess host
         run: |
 
-          mkdir -p ~/.ssh
-          echo "Host ${{ secrets.HOST }}" >> ~/.ssh/config
-          echo "  User ${{ secrets.USERNAME }}" >> ~/.ssh/config
-          echo "  IdentityFile ~/.ssh/id_rsa" >> ~/.ssh/config
-          chmod 600 ~/.ssh/config
+          # mkdir -p ~/.ssh
+          # echo "Host ${{ secrets.HOST }}" >> ~/.ssh/config
+          # echo "  User ${{ secrets.USERNAME }}" >> ~/.ssh/config
+          # echo "  IdentityFile ~/.ssh/id_rsa" >> ~/.ssh/config
+          # chmod 600 ~/.ssh/config
 
 
           install -m 600 -D /dev/null ~/.ssh/id_rsa
           echo "${{ secrets.KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -p ${{ secrets.PORT }} -H ${{ secrets.HOST }} > ~/.ssh/known_hosts
       - name: Connect to host and pull
         run: |
           ls -la ~/.ssh
-          ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }} -p ${{ secrets.PORT }}
+          ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }} -p ${{ secrets.PORT }} "ls -la"
           cd ${{ secrets.TARGET }}
           git pull
           ls -la
