--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -61,7 +61,7 @@ jobs:
 
       - name: Connect to host and pull
         run: |
-          ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }} -p ${{ secrets.PORT }} "cd ${{ secrets.TARGET }} && ls -la && git pull && npm install && npm run build && pm2 restart actions"
+          ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }} -p ${{ secrets.PORT }} "cd ${{ secrets.WORK_DIR }} && ls -la && git pull && [ -s "$HOME/.nvm/nvm.sh" ] && \. "$HOME/.nvm/nvm.sh" && npm install && npm run build && pm2 restart actions"
 
       - name: Cleanup
         run: rm -rf ~/.ssh
